compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__guard_referencing_unqualified_aliased_remote_constant.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\nimport wibble.{constant as aliased}\npub fn go(x) {\n  case x {\n    _ if aliased -> Nil\n    _ -> Nil\n  }\n}\n"
---
----- SOURCE CODE

import wibble.{constant as aliased}
pub fn go(x) {
  case x {
    _ if aliased -> Nil
    _ -> Nil
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(any()) -> nil.
go(X) ->
    _value = wibble:constant(),
    case X of
        _ when _value ->
            nil;

        _ ->
            nil
    end.
